# WhatsApp-QT

./: .gitignore  Cargo.toml  README.md  build.rs  resources.qrc  shell.nix
qml/: main.qml
qml/components/: SettingsDialog.qml  Sidebar.qml  WebTab.qml
qml/components/backup/: main_applyTheamCSS.qml
qml/styles/: AppStyle.qml
src/: app_controller.rs  main.rs  notification.rs  qml_resources.rs
